--- a/app/design/frontend/default/default/layout/wishlist.xml
+++ b/app/design/frontend/default/default/layout/wishlist.xml
@@ -106,6 +106,8 @@ Wishlist pages
                     <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.toCart" template="wishlist/button/tocart.phtml" />
                     <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.update" template="wishlist/button/update.phtml" />
                 </block>
+
+                <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml"/>
             </block>
         </reference>
         <reference name="right">
