--- a/app/design/frontend/default/default/template/page/2columns-left_cat.phtml
+++ b/app/design/frontend/default/default/template/page/2columns-left_cat.phtml
@@ -39,7 +39,10 @@
 
 <?php echo $this->getChildHtml('header') ?>
 <div class="wrap">
-    <?php echo $this->getChildHtml('content') ?>
+	<div class="page page_club">
+	    <?php echo $this->getChildHtml('content') ?>
+	    <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
+	</div>
 </div>
 
 <div class="footer">
