--- a/app/design/frontend/default/default/template/page/2columns-left_jobs-center.phtml
+++ b/app/design/frontend/default/default/template/page/2columns-left_jobs-center.phtml
@@ -42,6 +42,7 @@
     <div class="page page_club">
         <div class="club_article_center cs-clear">
             <?php echo $this->getChildHtml('content') ?>
+            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
         </div>
     </div>
 </div>
