--- a/app/design/frontend/base/default/template/points/checkout/success.phtml
+++ b/app/design/frontend/base/default/template/points/checkout/success.phtml
@@ -1,3 +1,4 @@
+<div class="points_checkout">
 	<div class="form-before">
 		<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('checkout_progress')->toHtml(); ?>
 		<div class="clear"></div>
@@ -18,3 +19,4 @@
 <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
 	
 	</div>
+</div>
