--- a/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
@@ -1,3 +1,9 @@
+<?php 
+
+    $quote = Mage::getSingleton('checkout/session')->getQuote();
+    $items = $quote->getAllVisibleItems();
+?>
+
 <div class="club_ecoupon_nav from-block">
     <div class="club_welcome">
         <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>,<br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
@@ -7,7 +13,7 @@
         <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("My Account")?></a>
         <a href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
         <a href="<?php echo $this->getUrl("giftproducts.html")?>"><?php echo $this->__("Gift Exchange")?></a>
-        <a href="<?php echo $this->getUrl("checkout/cart")?>"><?php echo $this->__("Giftcard")?></a>
+        <a href="<?php echo $this->getUrl("checkout/cart")?>"><?php echo $this->__("Giftcard")?> <span class="num">(<?php echo count($items)?>)</span></a>
     </div>
     <div class="club_opening_time">
         会员热线：4008-91-9135<br />
