删除测试代码

--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -174,15 +174,15 @@
 
                 $(".fieldset input[type='text']").each(function(){
                     if($(this).attr('id') != "telephone" && $(this).attr('id') != "verify_code"){
-                        //$(this).attr('disabled', 'disabled');
+                        $(this).attr('disabled', 'disabled');
                     }
                 });
                 $(".fieldset input[type='password']").each(function(){
-                    //$(this).attr('disabled', 'disabled');
+                    $(this).attr('disabled', 'disabled');
                 });
 
                 $(".fieldset select").each(function(){
-                    //$(this).attr('disabled', 'disabled');
+                    $(this).attr('disabled', 'disabled');
                 });
 
 
