--- a/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
@@ -4,6 +4,9 @@
     $items = $quote->getAllVisibleItems();
 ?>
 
+
+
+<?php  if (Mage::getSingleton("customer/session")->isLoggedIn()): ?>
 <div class="club_ecoupon_nav from-block">
     <div class="club_welcome">
         <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>,<br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
@@ -20,3 +23,14 @@
         工作日：10:00-18:00
     </div>
 </div>
+
+<?php else: ?>
+    <div class="club_ecoupon_nav from-block">
+        <div class="club_welcome">
+            <p><?php echo $this->__("Welcome to lily club")?> <br> <?php echo $this->__("You are not login")?></p>
+        </div>
+        <div class="club_navlist">
+            <a href="<?php echo $this->getUrl("checkout/cart/index")?>"><?php echo $this->__("Gift cart")?></a>
+        </div>
+    </div>
+<?php  endif;?>
