未登录用户左边导航

--- a/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
@@ -29,6 +29,9 @@
         <div class="club_welcome">
             <p><?php echo $this->__("Welcome to lily club")?> <br> <?php echo $this->__("You are not login")?></p>
         </div>
+        <div class="login">
+            <a href="<?php echo $this->getUrl("customer/account/login")?>"><?php echo $this->__("Login Now")?></a>
+        </div>
         <div class="club_navlist">
             <a href="<?php echo $this->getUrl("checkout/cart/index")?>"><?php echo $this->__("Gift cart")?></a>
         </div>
