checkout/cart 加左边导航

--- a/app/design/frontend/default/default/layout/checkout.xml
+++ b/app/design/frontend/default/default/layout/checkout.xml
@@ -86,6 +86,9 @@ Default layout, loads most of the pages
 					
                 </block>
 
+                <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml" />
+
+
                 <block type="core/text_list" name="checkout.cart.methods" as="methods" translate="label">
                     <label>Payment Methods After Checkout Button</label>
                     <block type="checkout/onepage_link" name="checkout.cart.methods.onepage" template="checkout/onepage/link.phtml"/>
