--- a/app/design/frontend/default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/default/default/template/checkout/cart.phtml
@@ -42,6 +42,8 @@
 <?php endif; ?>
 
 
+<?php echo $this->getChildHtml("lily_customer_nav")?>
+    
 <div class="cart product-essential">
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     
