--- a/app/design/frontend/default/default/template/page/2columns-left_cat.phtml
+++ b/app/design/frontend/default/default/template/page/2columns-left_cat.phtml
@@ -41,8 +41,10 @@
 <div class="wrap">
 	<div class="page page_club">
 	    <?php echo $this->getChildHtml('content') ?>
-	    <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
-	</div>
+        <div class="club_bottom_nav">
+            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
+        </div>
+    </div>
 </div>
 
 <div class="footer">
