--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -31,9 +31,9 @@
         </div>
 
         <div class="club-rule-content">
-            <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
             <form action="<?php echo $this->getUrl('lilyadmin/index/forgotpassword') ?>" class="forgetpasswordform" method="post" id="form-validate">
                 <div class="club_member_forget">
+                    <div class="error-message" style="display:none"></div>
                     <div class="fieldset">
                         <h2 class="legend"><?php echo $this->__('Retrieve your password here') ?></h2>
                         <p><?php echo $this->__('Please enter your telephone below.') ?></p>
@@ -41,10 +41,12 @@
                         <div class="club_memberreg_fi cs-clear">
                              <input type="text" name="telephone" placeholder="<?php echo $this->__("Telephone")?>" alt="telephone" id="telephone" class="input-text required-entry" value="" autocomplete="off">
                         </div>
-                        
                     </div>
+
                     <div class="buttons-set">
-                        <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub"><span class="second hideme">60</span><span class="submit-text"><span><?php echo $this->__('Submit') ?></span></span></button>
+                        <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub">
+                            <span class="second hideme">60</span><span class="submit-text"><span><?php echo $this->__('Submit') ?></span></span>
+                        </button>
                     </div>
                 </div>
             </form>
