--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -33,7 +33,7 @@
         <div class="club-rule-content">
             <form action="<?php echo $this->getUrl('lilyadmin/index/forgotpassword') ?>" class="forgetpasswordform" method="post" id="form-validate">
                 <div class="club_member_forget">
-                    <div class="error-message" style="display:none"></div>
+                    <div class="error-msg" style="display:none"></div>
                     <div class="fieldset">
                         <h2 class="legend"><?php echo $this->__('Retrieve your password here') ?></h2>
                         <p><?php echo $this->__('Please enter your telephone below.') ?></p>
